se agrego boostrad

--- a/AppCoder/templates/AppCoder/estudiantes.html
+++ b/AppCoder/templates/AppCoder/estudiantes.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-        <h1>PAGINA DE ETUDIANTES</h1>
+        <h1>PAGINA DE ESTUDIANTES</h1>
     </body>
     </html>
     
