--- a/AppCoder/templates/AppCoder/entregables.html
+++ b/AppCoder/templates/AppCoder/entregables.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta htto-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ENTREGABLES</title>
+{% extends "AppCoder/padre.html" %}
 
-    </head>
-    <body>
-        <h1>PAGINA DE ENTREGABLES</h1>
-    </body>
-    </html>
+{% load static %}
+
+{%block titulo_de_pagina %}
+<h1 class="mb-5">ENTREGABLES</h1>
+{% endblock %}
+
+{% block contenido_que_cambia %}
+
+<h1>ESTE ES EL CONTENIDO DE ENTREGABLES!!!</h1>
+
+{% endblock %}
     
